# Stream_Motion_Controller

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: user_config.json  user_config_gp4.json
config/robot_properties/: Fanuc_tool_DH.txt  gp4_DH.txt
examples/cpp/: controller_usage_example.cpp
examples/python/: controller_ssa_example.py  controller_usage_example.py
include/: Robot.hpp  UDP_Interface.hpp  UDP_Socket.hpp
include/Utils/: Common.hpp  FileIO.hpp  Math.hpp
launch/: controller_node.launch  controller_node_cartesian.launch  controller_node_fanuc.launch  controller_node_gp4.launch  controller_node_teleoperation.launch  controller_usage_example.launch  r1_controller_node.launch  r2_controller_node.launch
src/: Robot.cpp  UDP_Interface.cpp  controller_node.cpp
src/Utils/: FileIO.cpp  Math.cpp  dare_solver.py
src/ros_node/: controller_node_cartesian.cpp  controller_node_teleoperation.cpp
